# CUELegendKeys

./: .gitignore  CMakeLists.txt  CUELegendKeys.sln  README.md
CUESDK/lib/i386/: CUESDK_2015.lib
CUESDK/lib/x64/: CUESDK.x64_2015.lib
Resources/PhotoShopSrc/: LoadingDetectionTemplate.psd  backportColors.psd  setupBanner.psd
Resources/_src/: UIButtonArrow.psd  UIButtonText.psd  UIImageBorderPos.psd  UIImageBorderSize.psd  UIKey.psd  backportColors.psd  icons.psd  learnBackgroundNeedsGameClient.psd  setupBanner.psd  windowBackgroundIdle.psd  windowBackgroundPatch.psd  windowBackgroundSelect.psd
source/: AppData.cpp  AppData.h  BubbleNotification.cpp  BubbleNotification.h  CUELegendKeys.cpp  CUELegendKeys.h  CUELegendKeys.vcxproj  CUELegendKeys.vcxproj.filters  CUELegendKeysResources.h  CUELegendKeysResources.rc  Constants.h  DBScan.cpp  DBScan.h  FPBase.cpp  FPBase.h  FPGameClient.cpp  FPGameClient.h  FPIdle.cpp  FPIdle.h  FPLearnMode.cpp  FPLearnMode.h  FPPatchClient.cpp  FPPatchClient.h  FPSMeter.cpp  FPSMeter.h  FPScreenMirror.cpp  FPScreenMirror.h  FPSelectClient.cpp  FPSelectClient.h  FileSystem.cpp  FrameProcessing.cpp  FrameProcessing.h  HSBackport.cpp  HSBackport.h  HSBar.cpp  HSBar.h  HSCastable.cpp  HSCastable.h  HSChamp.cpp  HSChamp.h  (+68 more)
source/libs/: SimpleIni.h
source/setup/CLKSetup/: CLKSetup.vdproj
