cmake_minimum_required(VERSION 3.3)
project(CUELegendKeys)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    CUESDK/include/CorsairLedIdEnum.h
    CUESDK/include/CUESDK.h
    CUESDK/include/CUESDKGlobal.h
    source/libs/SimpleIni.h
    source/BubbleNotification.cpp
    source/BubbleNotification.h
    source/Constants.h
    source/convert.cpp
    source/convert.h
    source/CUELegendKeys.cpp
    source/CUELegendKeys.h
    source/CUELegendKeysResources.h
    source/FileSystem.cpp
    source/FileSystem.h
    source/FPGameClient.cpp
    source/FPGameClient.h
    source/FPIdle.cpp
    source/FPIdle.h
    source/FPScreenMirror.cpp
    source/FPScreenMirror.h
    source/FPSelectClient.cpp
    source/FPSelectClient.h
    source/FrameProcessing.cpp
    source/FrameProcessing.h
    source/HotSpotGroup.cpp
    source/HotSpotGroup.h
    source/HotSpotLearn.cpp
    source/HotSpotLearn.h
    source/HSBackport.cpp
    source/HSBackport.h
    source/HSBar.cpp
    source/HSBar.h
    source/HSCastable.cpp
    source/HSCastable.h
    source/HSChamp.cpp
    source/HSChamp.h
    source/HSLBar.cpp
    source/HSLBar.h
    source/HSLBase.cpp
    source/HSLBase.h
    source/HSLItem.cpp
    source/HSLItem.h
    source/HSLSkill.cpp
    source/HSLSkill.h
    source/ImageFilter.cpp
    source/ImageFilter.h
    source/ImageFilterMat.cpp
    source/ImageFilterMat.h
    source/LEDController.cpp
    source/LEDController.h
    source/main.cpp
    source/NuLogger.cpp
    source/NuLogger.h
    source/ProcessList.cpp
    source/ProcessList.h
    source/Resource.h
    source/ScreenHotSpot.cpp
    source/ScreenHotSpot.h
    source/Settings.cpp
    source/Settings.h
    source/stdafx.h
    source/SystemTrayIcon.cpp
    source/SystemTrayIcon.h
    source/targetver.h
    source/UIBase.cpp
    source/UIBase.h
    source/UIMainDialog.cpp
    source/UIMainDialog.h
    source/UIMainWindow.cpp
    source/UIMainWindow.h
    source/UIMessage.cpp
    source/UIMessage.h
    source/UISettingsDialog.cpp
    source/UISettingsDialog.h)

add_executable(CUELegendKeys ${SOURCE_FILES})